crates/aura-macros/tests/boundaries/capability_family_missing_local_name.rs
use aura_macros::capability_family;

#[capability_family(namespace = "chat")]
enum ChatCapability {
    Send,
}

fn main() {}
